<resources>
    <string name="app_name">LED Control v2</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="status">Status: </string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="choose_diode">Choose diode</string>
    <string name="interval">Interval</string>
    <string name="pulse">Pulse</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="white">White</string>
    <string name="yellow">Yellow</string>
    <string name="purple">Purple</string>
    <string name="ltblue">Light Blue</string>
    <string name="orange">Orange</string>
    <string name="off">Off</string>
    <string name="execute">Execute</string>
</resources>
